# chat-v2

./: README.md  client.spec  naval_fate.py  setup.cfg  test.py  threadTest.py  새 텍스트 문서.txt
src/chat/: __main__.py  client.py  server.py  ui.py
src/chat_choeuhyeon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
